Readded custom dimension stuff.